Changed curr_date in template

--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
           <li class="arrow"><a href="">&raquo;</a></li>
         </ul>
       </div>
-      
+      {{ curr_date }}
       <div id="live-games-section" class="row column large">
         
       </div>
