cosmetic upgrades, and send date parameter in pick requests

--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,4 @@
+/*------------- COMMON STUFF ---------------------*/
 a {
 	color: orange;
 	text-decoration-color: yellow;
@@ -8,9 +9,26 @@ a {
 }
 
 
+.loader {
+    border: 6px solid #f3f3f3; /* Light grey */
+    border-top: 6px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+
 /* -------------- PICK SECTIONS ------------------*/
+
 .section-label {
 	padding-top: 20px;
+	padding-bottom: 10px;
 }
 
 
@@ -19,6 +37,7 @@ a {
 	border-width: 1px;
 	border-color: orange;
 	border-radius: 5px;
+	opacity: 0;
 }
 
 
@@ -30,6 +49,7 @@ a {
 	border-color: black;
 	border-radius: 5px;
 	margin: 5px;
+	box-shadow: 1px 1px 1px #888888;
 }
 
 .pick-card-header {
