beefed up goatdate, client now loads today and tomorrow

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Goad Index</title>
+    <title>Goat Index</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -80,8 +80,11 @@
         </ul>
       </div>
 
-      <div id="upcoming-games" class="row section-label">
+      <div id="upcoming-label" class="row section-label">
         Upcoming Games
+      </div>
+      <div id="upcoming-games-section" class="row column large">
+
       </div>
 
     </div>
