live game updates

--- a/templates/index.html
+++ b/templates/index.html
@@ -87,6 +87,7 @@
     </div>
 
     {% include 'templates/pick-card-template.html' %}
+    {% include 'templates/live-pick-card-template.html' %}
 
     
 
