--- a/templates/live-pick-card-template.html
+++ b/templates/live-pick-card-template.html
@@ -1,5 +1,5 @@
 {% raw %}
-  <script id="pick-card-template" type="text/x-handlebars-template">
+  <script id="live-pick-card-template" type="text/x-handlebars-template">
 
     {{#if isLast}}
       <div class="pick-card-container small-12 medium-6 large-3 columns end">
@@ -7,23 +7,21 @@
       <div class="pick-card-container small-12 medium-6 large-3 columns">
     {{/if}}
     
-      <div class="pick-card large-12 columns" id='{{game_id}}'>
+      <div class="pick-card live large-12 columns" id='{{game_id}}'>
         <div class="pick-card-header row">
-          <div class="time large-6 columns"> {{pretty_start_time}}</div>
+          <div class="time large-6 columns"> {{live_data.live_clock}}</div>
         </div>
 
         <div class="row pick-card-option home {{#if homePicked }} picked {{/if}}">
           <div class="team-name small-2 large-2 columns"> {{home}}</div>
-           {{#if has_live_data}}
-            <div class="win-loss small-10 large-10 columns"> ({{live_data.hTeam.win}}-{{live_data.hTeam.loss}})</div>
-            {{/if}}
+          <div class="win-loss small-8 large-8 columns"> ({{live_data.hTeam.win}}-{{live_data.hTeam.loss}})</div>
+          <div class="score small-2 large-2 columns"> {{live_data.hTeam.score}}</div>
         </div>
 
         <div class="row pick-card-option away {{#if awayPicked }} picked {{/if}}">
           <div class="team-name small-2 large-2 columns"> {{away}}</div>
-          {{#if has_live_data}}
-            <div class="win-loss small-10 large-10 columns"> ({{live_data.vTeam.win}}-{{live_data.vTeam.loss}})</div>
-            {{/if}}
+          <div class="win-loss small-8 large-8 columns"> ({{live_data.vTeam.win}}-{{live_data.vTeam.loss}})</div>
+          <div class="score small-2 large-2 columns"> {{live_data.vTeam.score}}</div>
         </div>        
 
       </div>
