ability to pick future games

--- a/templates/index.html
+++ b/templates/index.html
@@ -77,9 +77,12 @@
         
       </div>
 
-      <div id="upcoming-label" class="row section-label">
-        Upcoming Games
+      <div class="row section-label">
+        <div id="upcoming-label" class="small-3 large-1 columns"></div>
+        <a id="next-btn" class="small-6 large-2 columns end"> Next </a>
+
       </div>
+      <div id="upcoming-loader" class="row loader"></div>
       <div id="upcoming-games-section" class="section row column large">
 
       </div>
