rudimentary bi directional date select

--- a/templates/index.html
+++ b/templates/index.html
@@ -71,14 +71,13 @@
         
       </div>
       <div id="today-upcoming-label" class="section-label row">
-      Today's Upcoming Games
       </div>
       <div id="today-upcoming-games-section" class="section row column large">
         
       </div>
 
       <div class="row section-label">
-        <div id="upcoming-label" class="small-3 large-1 columns"></div>
+        <a id="upcoming-label" class="small-3 large-1 columns"></a>
         <a id="next-btn" class="small-6 large-2 columns end"> Next </a>
 
       </div>
