--- a/css/app.css
+++ b/css/app.css
@@ -1,26 +1,101 @@
-/*------------- COMMON STUFF ---------------------*/
-a {
-	color: orange;
-	text-decoration-color: yellow;
+/*-------------- OVERRIDE FOUNDATION ---------------*/
+.off-canvas-content {
+	box-shadow: none;
 }
+
+#widemenu {
+	box-shadow: 0px 3px 3px #888888;
+	
+}
+
+.dropdown.menu {
+	
+}
+
+.top-bar {
+	background-color: #AA2159;
+}
+
+.top-bar ul{
+	background-color: #AA2159;
+}
+
+.menu {
+	
+}
+
+/*------------- COMMON STUFF ---------------------*/
+
+
+body {
+	font-family: 'Open Sans', sans-serif;
+}
+
+.off-canvas-content {
+
+}
+
+.main-menu-text a {
+	font-size: 1.3rem;
+	font-weight: 700;
+	color: white;
+}
+
+.logo-text {
+	font-family: 'Shrikhand', sans-serif;
+	letter-spacing: 2px;
+	font-size: 2.5rem;
+	color: #EEE;
+	background-color: transparent;
+}
+
+
+#goat {
+	height: 100px;
+	width: auto;
+	position: absolute;
+	z-index: -100;
+}
+
+a:hover {
+	color: #DDD;
+}
+
 
 #date-row {
 	padding-top: 20px;
 }
 
 
-.loader {
-    border: 6px solid #f3f3f3; /* Light grey */
-    border-top: 6px solid #3498db; /* Blue */
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
-    animation: spin 1s linear infinite;
+.top-space {
+
 }
 
-@keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+/* -------------- DATE NAV -----------------------*/
+#date-nav {
+
+	text-align: center;
+}
+
+.date-button {
+	border-style: solid;
+	border-width: 1px;
+	border-color: black;
+	border-radius: 3px;
+	cursor: pointer;
+}
+
+#date {
+	padding-top: 5px;
+}
+
+.date-button i {
+	padding-top: 5px;
+}
+
+.date-button:hover {
+	background-color: #EEE;
+
 }
 
 
@@ -44,17 +119,58 @@ a {
 }
 
 /* -------------- PICK CARDS ---------------------*/
+
 .pick-card {
-	border-style: solid;
+	/*border-style: solid;
 	border-width: 1px;
 	border-color: black;
 	border-radius: 3px;
-	margin: 5px;
-	box-shadow: 1px 1px 1px #888888;
+	box-shadow: 1px 1px 1px #888888;*/
+
+	background-color: #FFF;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #EEE;
+	border-radius: 3px;
+
+	margin: 10px;
+}
+
+.pick-card:hover {
+
+}
+
+.pick-checkbox-container {
+}
+
+.pick-checkbox {
+	width: 15px;
+	height: 15px;
+	background: white;
+	border-width: 1px;
+	border-color: black;
+	border-style:  solid;
+	border-radius: 2px;
+	margin-top: 4px;
+}
+
+.pick-checkbox:hover {
+	border-width: 2px;
+}
+
+.pick-checkbox.picked {
+	background-color: #7EC2AA;
 }
 
 .pick-card.live {
-	border-color: orange;
+	border-color: #AA2159;
+	border-radius: 0;
+	margin-bottom: 0;
+	margin-top: 0;
+	border-top-width: 0px;
+	border-bottom-width: 0px;
+
+	font-size: .8rem;
 }
 
 .pick-card.past {
@@ -62,33 +178,98 @@ a {
 }
 
 .pick-card-header {
-
+	padding-top: 5px;
+	padding-bottom: 5px;
+	background-color: #EEE;
 }
 
 .pick-card-option {
 	transition: .25s;
 	text-align: left;
+	padding-top: 5px;
+	padding-bottom: 5px;
+
+	border-bottom-width: 1px;
+	border-bottom-style: solid;
+	border-bottom-color: #EEE;
+}
+
+.pick-indicator  {
+	margin-top: 5px;
+	margin-left: 5px;
+	margin-right: 5px;
+	width: 10px;
+	height: 10px;
+	background-color: white;
+	border-width: 0px;
+	border-color: white;
+	border-style:  solid;
+	border-radius: 50%
+}
+
+.pick-indicator.picked {
+	background-color: #7EC2AA;
+	border-color: #7EC2AA;
 }
 
 .pick-card-option.pickable {
 	cursor: pointer
 }
 
-.pick-card-option.picked {	
-	background-color: orange;
-}
-
 .pick-card-header .time {
-	color: grey;
+	color: black;
 	font-size: 12px;
 }
 
 .pick-card-option.pickable:hover {
-	background-color: orange;
+	
 }
 
 .pick-card-option .win-loss {
 	color: grey;
 	font-size: 14px;
 
+}
+
+/*---------------- LOADER --------------*/
+.spinner {
+  margin: 100px auto 0;
+  width: 70px;
+  text-align: center;
+}
+
+.spinner > div {
+  width: 15px;
+  height: 15px;
+  background-color: #AA2159;
+
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+}
+
+.spinner .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+
+.spinner .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+  0%, 80%, 100% { -webkit-transform: scale(0) }
+  40% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bouncedelay {
+  0%, 80%, 100% { 
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  } 40% { 
+    -webkit-transform: scale(1.0);
+    transform: scale(1.0);
+  }
 }
