--- a/templates/live-pick-card-template.html
+++ b/templates/live-pick-card-template.html
@@ -10,7 +10,7 @@
 
         <div class="row pick-card-option large-collapse home">
           <div class="small-2 large-2 columns">
-            <div class="pick-indicator picked"></div> 
+            <div class="pick-indicator {{#if homePicked }} picked {{/if}}"></div> 
           </div>
 
           <div class="team-name small-6 large-8 columns"> 
