--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    
+    <link rel="shortcut icon" type="image/x-icon" href="/goatfavicon.ico"/>
+    
     <link rel="stylesheet" href="/css/flexboxgrid.min.css">
     <link rel="stylesheet" href="/css/style.css">
 
